--- a/kubische_ruimteverdeling/index.html
+++ b/kubische_ruimteverdeling/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<head><title>Kubische Ruimteverdeling</title></head>
+	<head>
+		<title>Kubische Ruimteverdeling</title>
+		<meta charset='utf-8'>
+	</head>
 	<body>
-		<div class="threejs"></div>
+		<div class="kubisch"></div>
+		<script src="lib/jquery-1.11.2.min.js"></script>
 		<script src="lib/three.min.js"></script>
         <script src="lib/Detector.js"></script>
         <script src="js/kubisch.js"></script>
