added demo to gh-pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/mdvanes/ImpossibleObjects/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="kubische_ruimteverdeling/index.html" id="download-zip" class="button"><span>View Demo</span></a>
           <a href="https://github.com/mdvanes/ImpossibleObjects/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/mdvanes/ImpossibleObjects" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
