--- a/kubische_ruimteverdeling/index.html
+++ b/kubische_ruimteverdeling/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Kubische Ruimteverdeling</title>
-		<meta charset='utf-8'>
-	</head>
-	<body>
-		<div class="kubisch"></div>
-		<script src="lib/jquery-1.11.2.min.js"></script>
-		<script src="lib/three.min.js"></script>
+    <head>
+        <title>Kubische Ruimteverdeling</title>
+        <meta charset='utf-8'/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+        <style>
+body {
+    text-align: center;
+}
+button {
+    font-size: 2em;
+    padding: 0.5em;
+}
+        </style>
+    </head>
+    <body>
+        <div class="kubisch"></div>
+        <script src="lib/jquery-1.11.2.min.js"></script>
+        <script src="lib/three.min.js"></script>
         <script src="lib/Detector.js"></script>
         <script src="js/kubisch.js"></script>
-	</body>
+    </body>
 </html>
