--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
@@ -10,6 +11,40 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <style>
+.inner {
+  width: 100%;
+}
+
+@media screen and (min-width:1200px)
+{
+  .inner {
+    width: 1200px;
+  }
+}
+
+.demo {
+  /*background-color: #ccc;*/
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 0 15px;
+  text-align: center;
+  vertical-align: top;
+  width: 33.3%;
+}
+
+.demo a {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+@media screen and (max-width:600px)
+{
+  .demo {
+    width: 100%;
+  }
+}
+    </style>
     <title>Impossibleobjects by mdvanes</title>
   </head>
 
@@ -23,45 +58,29 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="kubische_ruimteverdeling/index.html" id="download-zip" class="button"><span>View Demo</span></a>
-          <a href="https://github.com/mdvanes/ImpossibleObjects/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <!-- <a href="kubische_ruimteverdeling/index.html" id="download-zip" class="button"><span>View Demo</span></a>
+          <a href="https://github.com/mdvanes/ImpossibleObjects/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a> -->
           <a href="https://github.com/mdvanes/ImpossibleObjects" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
 
         <section id="main_content">
-          <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <div class="demo">
+            <h3>Reutersvard Triangle</h3>
+            <img src="images/reutersvard.png"/>
+            <p>description</p>
+          </div><div class="demo">
+            <h3>Kubische Ruimteverdeling</h3>
+            <img src="images/kubischeruimteverdeling.jpg" style="width: 200px" />
+            <p>description</p>
+            <a href="kubische_ruimteverdeling/index.html"><span>View Demo</span></a>
+          </div><div class="demo">
+            <h3>Mobius/Rune Logo</h3>
+            <img src="images/mdworld_logo.png" style="width: 200px" />
+            <p>description</p>
+          </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
         </section>
 
         <footer>
