--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   }
 }
     </style>
-    <title>Impossibleobjects by mdvanes</title>
+    <title>Impossible Objects by mdvanes</title>
   </head>
 
   <body>
@@ -53,7 +53,7 @@
       <div class="inner">
 
         <header>
-          <h1>Impossibleobjects</h1>
+          <h1>Impossible Objects</h1>
           <h2></h2>
         </header>
 
@@ -67,9 +67,10 @@
 
         <section id="main_content">
           <div class="demo">
-            <h3>Reutersvard Triangle</h3>
+            <h3>Reutersvärd Triangle</h3>
             <img src="images/reutersvard.png"/>
-            <p>description</p>
+            <p>A reimplementation of one of the very first things I every programmed, in SuperLogo around 1995.</p>
+            <a href="reutersvard_triangle/index.html"><span>View Demo</span></a>
           </div><div class="demo">
             <h3>Kubische Ruimteverdeling</h3>
             <img src="images/kubischeruimteverdeling.jpg" style="width: 200px" />
