--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           <div class="demo">
             <h3>Reutersvärd Triangle</h3>
             <img src="images/reutersvard.png"/>
-            <p>A reimplementation of one of the very first things I every programmed, in SuperLogo around 1995.</p>
+            <p>A reimplementation of one of the very first things I every programmed, in SuperLogo around 1995. Implementation in plain Canvas. [Improvent: toggle colors to white with border; Improvement: upgrade would be to have a 3d version]</p>
             <a href="reutersvard_triangle/index.html"><span>View Demo</span></a>
           </div><div class="demo">
             <h3>Kubische Ruimteverdeling</h3>
             <img src="images/kubischeruimteverdeling.jpg" style="width: 200px" />
-            <p>description</p>
+            <p>Kubische ruimteverdeling, lithografie (1952) by M.C. Escher. Implementation in Canvas + Three.js.</p>
             <a href="kubische_ruimteverdeling/index.html"><span>View Demo</span></a>
           </div><div class="demo">
             <h3>Mobius/Rune Logo</h3>
