--- a/reutersvard_triangle/index.html
+++ b/reutersvard_triangle/index.html
@@ -5,16 +5,21 @@
         <meta charset='utf-8'/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <style>
-body {
+html, body {
+    background-color: #EEE;
+    font-family: sans-serif;
     text-align: center;
 }
-button {
-    font-size: 2em;
-    padding: 0.5em;
+header {
+    margin-bottom: 1em;
 }
         </style>
     </head>
     <body>
+        <header>
+            <h1>Reutersvärd Triangle</h1>
+            Cube size: <input type="number" value="100" id="cubeSize" /> <a href="../index.html">Home</a>
+        </header>
         <div class="reutersvard"></div>
         <script src="lib/jquery-1.11.2.min.js"></script>
         <script src="js/reutersvard.js"></script>
