--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
           </div><div class="demo">
             <h3>Mobius/Rune Logo</h3>
             <img src="images/mdworld_logo.png" style="width: 200px" />
-            <p>description</p>
+            <p>Combination of a Mobius strip and a rune, which is the logo of <a href="http://mdworld.nl">mdworld.nl</a>. Implementation in Canvast + Three.js.</p>
+            <a href="mobiusrune/index.html"><span>View Demo</span></a>
           </div>
 
         </section>
