--- a/mobiusrune/index.html
+++ b/mobiusrune/index.html
@@ -12,9 +12,19 @@ html, body {
 body {
     text-align: center;
 }
+p {
+    font-family: sans-serif;
+}
+canvas {
+    margin: 1em;
+}
         </style>
             </head>
     <body>
+        <p>
+        Based on <a href="https://github.com/mrdoob/three.js/blob/master/examples/webgl_geometry_cube.html">webgl_geometry_cube</a>
+        </p>
+
         <div class="mobiusrune"></div>
         <script src="lib/three.min.js"></script>
         <script src="js/mobiusrune.js"></script>
