--- a/mobiusrune/index.html
+++ b/mobiusrune/index.html
@@ -12,11 +12,15 @@ html, body {
 body {
     text-align: center;
 }
-p {
+h2, p {
     font-family: sans-serif;
 }
 canvas {
     margin: 1em;
+}
+h2 {
+    color: red;
+    font-weight: bold;
 }
         </style>
             </head>
@@ -24,6 +28,7 @@ canvas {
         <p>
         Based on <a href="https://github.com/mrdoob/three.js/blob/master/examples/webgl_geometry_cube.html">webgl_geometry_cube</a>
         </p>
+        <h2>WORK IN PROGRESS</h2>
 
         <div class="mobiusrune"></div>
         <script src="lib/three.min.js"></script>
