extracting functions to separate files

--- a/mobiusrune/index.html
+++ b/mobiusrune/index.html
@@ -32,6 +32,9 @@ h2 {
 
         <div class="mobiusrune"></div>
         <script src="lib/three.min.js"></script>
+
+        <script src="js/routeSpline.js"></script>
+        <script src="js/setCameraOnSplinePath.js"></script>
         <script src="js/mobiusrune.js"></script>
     </body>
 </html>
