--- a/mobiusrune/index.html
+++ b/mobiusrune/index.html
@@ -34,6 +34,8 @@ h2 {
         <script src="lib/three.min.js"></script>
 
         <script src="js/routeSpline.js"></script>
+        <script src="js/util.js"></script>
+        <script src="js/meshLoader.js"></script>
         <script src="js/setCameraOnSplinePath.js"></script>
         <script src="js/mobiusrune.js"></script>
     </body>
