Button for play

--- a/mobiusrune/index.html
+++ b/mobiusrune/index.html
@@ -22,6 +22,9 @@ h2 {
     color: red;
     font-weight: bold;
 }
+button {
+    font-size: 200%;
+}
         </style>
             </head>
     <body>
@@ -29,8 +32,9 @@ h2 {
         Based on <a href="https://github.com/mrdoob/three.js/blob/master/examples/webgl_geometry_cube.html">webgl_geometry_cube</a>
         </p>
         <h2>WORK IN PROGRESS</h2>
-
+        <button title="Play!">&#x25ba;</button>
         <div class="mobiusrune"></div>
+
         <script src="lib/three.min.js"></script>
 
         <script src="js/routeSpline.js"></script>
