--- a/mobiusrune/index.html
+++ b/mobiusrune/index.html
@@ -37,10 +37,10 @@ button {
         <script src="lib/three.min.js"></script>
         <script src="lib/Tween.js"></script>
 
-        <script src="js/routeSpline.js"></script>
+        <!-- <script src="js/routeSpline.js"></script> -->
         <script src="js/util.js"></script>
         <script src="js/meshLoader.js"></script>
-        <script src="js/setCameraOnSplinePath.js"></script>
+        <!-- <script src="js/setCameraOnSplinePath.js"></script> -->
         <script src="js/mobiusrune.js"></script>
     </body>
 </html>
